<resources>
    <string name="app_name" translatable="false">UsedBooks</string>
    <string name="password" translatable="false">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sing in</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="university">University</string>
    <string name="create_account">Create your account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="send">Send Message</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="testtext" translatable="false">TestText</string>
    <string name="hi">Hi</string>
    <string name="contact_me">Contact Me</string>
    <string name="name_of_material">Name of material</string>
    <string name="name_of_client">Name of client</string>
    <string name="price">Price</string>
    <string name="name_of_vendor">Name of vendor</string>
    <string name="add_announce">Add announce</string>
    <string name="name_of_student">Name of student</string>
    <string name="last_messagge">Last message</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_confirmpassword_different">Password and Confirm password are different</string>
    <string name="register_ok">Registration successfully, please make login</string>
    <string name="register_not_ok">Registration unsuccessful</string>
    <string name="type_a_message">Type a message</string>
    <string name="add_image">Add image</string>
    <string name="add_image_from_files">Add image from files</string>
    <string name="add_image_from_camera">Add image from camera</string>
    <string name="new_announcement">New Announcement</string>
    <string name="select_position">Select position</string>
    <string name="send_data">Send data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="typology">Typology</string>
    <string name="get_current_position">Get current position</string>
    <string name="testnumber" translatable="false">80</string>
    <string name="university_course">University course</string>
    <string name="you_have_no_published_ad">You have no published ad</string>
    <string name="state_of_material">State of material</string>
    <string name="sold">Sold</string>
    <string name="materials_for_sale">Materials for sale</string>
    <string name="materials_sold">Materials sold</string>
    <string name="transaction">Transaction</string>
    <string name="confirm">Confirm</string>
    <string name="choose_the_student_that_acquire_the_material">Choose the student that acquire the material</string>
    <string name="there_are_no_materials">There are no materials</string>
    <string name="announcement">Announcement</string>
    <string name="no_chats">There are no chats</string>
    <string name="action_sign_in">Sing in or register</string>
    <string name="no_message">There are no messages yet</string>
    <string name="image_profile">Image Profile</string>
    <string name="old_image_profile">Old Image Profile</string>
    <string name="new_image_profile">New Image Profile</string>
    <string name="logo_image">Logo Image</string>
    <string name="image_of_announcement">Image of Announcement</string>
    <string name="no_data">Error in submitted data</string>
    <string name="empty">Empty</string>
    <string name="message_empty">Error: there are some text empty</string>
    <string name="error">Error</string>
    <string name="image_of_chosen_photo">Image of chosen photo</string>
</resources>