<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.nuovoAnnuncio.DatiFragment" >

    <EditText
        android:id="@+id/et_title_new_annuncio"
        android:layout_width="0dp"

        android:layout_height="wrap_content"

        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/title"

        android:text="@string/testtext"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_descrizione_new_annuncio"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/testtext"

        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/et_tipologia_new_annuncio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title_new_annuncio" />

    <EditText
        android:id="@+id/et_tipologia_new_annuncio"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="10dp"

        android:text="@string/testtext"
        android:hint="@string/typology"

        app:layout_constraintBottom_toTopOf="@+id/et_corso_new_annuncio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_corso_new_annuncio"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="10dp"

        android:text="@string/testtext"
        android:hint="@string/university_course"

        app:layout_constraintBottom_toTopOf="@+id/et_prezzo_new_annuncio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_prezzo_new_annuncio"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"

        android:hint="@string/price"
        android:text="@string/testnumber"

        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/bt_invio_dati"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_invio_dati"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="50dp"

        android:text="@string/send_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_prezzo_new_annuncio"
        app:layout_constraintStart_toStartOf="@+id/et_prezzo_new_annuncio" />
</androidx.constraintlayout.widget.ConstraintLayout>