<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.profile.ChangeFotoProfiloFragment">

    <ImageView
        android:id="@+id/iv_foto_profilo_attuale"

        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"

        android:background="@drawable/bg_image_profile"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/old_image_profile" />

    <ImageView
        android:id="@+id/iv_foto_profilo_nuovo"

        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"

        android:background="@drawable/bg_image_profile"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_foto_profilo_attuale"
        android:contentDescription="@string/new_image_profile" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_foto_profilo_nuovo">

        <Button
            android:id="@+id/btn_image_camera"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="@style/primaryStyleButton"
            android:layout_weight="1"

            android:text="@string/add_image_from_camera" />

        <Button
            android:id="@+id/btn_image_gallery"

            android:layout_width="0dp"

            style="@style/primaryStyleButton"

            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"

            android:text="@string/add_image_from_files" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_foto_profilo_nuovo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ll_button"
        app:layout_constraintStart_toStartOf="@+id/ll_button"
        app:layout_constraintTop_toBottomOf="@+id/ll_button">


        <Button
            android:id="@+id/btn_image_confirm"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/confirm"

            style="@style/primaryStyleButton"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>