<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.RegisterFragment">
    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_register">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <EditText
                android:id="@+id/et_Name"

                style="@style/primaryStyleEditText"
                android:layout_width="0dp"

                android:layout_height="wrap_content"

                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"

                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_Surname"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"

                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"

                android:layout_marginEnd="48dp"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_Name" />

            <EditText
                android:id="@+id/et_email_login"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"

                android:layout_marginTop="32dp"

                android:layout_marginEnd="48dp"

                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"

                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_Surname" />

            <EditText
                android:id="@+id/et_Password"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"

                android:layout_marginEnd="48dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"

                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email_login" />

            <EditText
                android:id="@+id/et_ConfirmPassword"

                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="48dp"

                android:layout_marginTop="32dp"
                android:layout_marginEnd="48dp"

                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_Password" />

            <Button
                android:id="@+id/btn_Register"
                style="@style/primaryStyleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="48dp"

                android:layout_marginTop="52dp"
                android:layout_marginEnd="48dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_ConfirmPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>