<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="158dp"
        android:layout_height="134dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/test" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"

        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:ems="10"

        android:inputType="textEmailAddress"
        android:hint="@string/email_address"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:ems="10"

        android:inputType="textPassword"
        android:hint="@string/password"

        app:layout_constraintEnd_toEndOf="@id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"

        android:text="@string/login"

        app:layout_constraintBottom_toTopOf="@+id/SignInLogin"
        app:layout_constraintEnd_toEndOf="@id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/editTextTextPassword"

        style="@style/primaryStyleButton"/>

    <Button
        android:id="@id/SignInLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"

        android:text="@string/sign_in"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_Login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/btn_Login"

        style="@style/secondStyleButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>